@@ -1,3 +1,4 @@
+	* fix ABI compatibility issue introduced with preformatted entry type
 	* add web_seed_name_lookup_retry to session_settings
 	* slightly improve proxy settings backwards compatibility
 	* add function to get default settings
